--- a/Apps/Sandcastle/gallery/Models.html
+++ b/Apps/Sandcastle/gallery/Models.html
@@ -76,6 +76,7 @@ require([
         var primitives = scene.getPrimitives();
         
         var m = new Cesium.Model('../../../Assets/Model/duck/duck.json');
+        m.modelMatrix = Cesium.Matrix4.fromScale(new Cesium.Cartesian3(9000000.0, 9000000.0, 9000000.0));
         Sandcastle.declare(m); // For Sandcastle highlighting.
         primitives.add(m);
     }
