Fixed Scene.js draw order - or at least most of it

--- a/Apps/Sandcastle/gallery/Two Viewer Widgets.html
+++ b/Apps/Sandcastle/gallery/Two Viewer Widgets.html
@@ -135,8 +135,8 @@ require([
         // Get the time from the shared controller, then
         // update and render both widgets.
         var currentTime = animationController.update();
-        widget1.initializeFrame();
-        widget2.initializeFrame();
+        widget1.initializeFrame(currentTime);
+        widget2.initializeFrame(currentTime);
         widget1.update(currentTime);
         widget2.update(currentTime);
         widget1.render();
