--- a/Apps/CesiumViewer/index.html
+++ b/Apps/CesiumViewer/index.html
@@ -18,5 +18,10 @@
 </head>
 <body class="claro" style="background: #000;">
     <div id="cesiumContainer" class="fullWindow"></div>
+    <div class="activeOverlay">Active satellites in GEO/MEO</div>
+    <div class="altitudeOverlay">Altitude < 20,000 miles above the Earth</div>
+    <div class="closeOverlay">Altitude at closest approach: ~17,225 miles</div>
+    <div class="jplOverlay">Trajectory modeled using JPL data from Jan. 12, 2013</div>
+    <button id="zoomID" class="zoomButton" data-dojo-type="dijit.form.ToggleButton">Toggle Asteroid View</button>
 </body>
 </html>
